--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
     padding: 0;
     margin: 0;
     border: 0;
+    box-sizing: border-box;
 }
 
 .wrapper{
@@ -16,13 +17,15 @@
     /* width: 300px; */
     /* width: 260px; */
     /* width: 210px; */
-    width: 200px;
-    height: 200px;
+    /* width: 200px;
+    height: 200px; */
+    width: 250px;
+    height: 250px;
     display: inline-block;
     padding: 20px;
     margin: 25px;
     border: 5px solid #61dfce;
-   
+    overflow: hidden;
 }
 
 .box1{
