--- a/main.css
+++ b/main.css
@@ -30,10 +30,14 @@
 
 .box1{
     background-color: red;
+    border-radius: 0 50% 0 10px;
 }
 
 .box2{
     background-color: yellow;
+    border-radius: 50%;
+    line-height: 200px;
+    text-align: center;
 }
 
 .box3{
